Gardening Tips Work Cited added

--- a/public_html/Gardening_Tips.html
+++ b/public_html/Gardening_Tips.html
@@ -98,6 +98,27 @@
       </li>      
     </ul>
   </nav>
+  
+   <section>
+    <h1>Work Cited  </h1>
+  </section>
+  
+  <nav>
+    <ul>
+        <li>
+            <p> "20 Insanely Clever Gardening Tips and Ideas (with Pictures!)." Listotic. N.p., 2015. Web. 07 Sept. 2016. </p>
+        </li>
+        <li>
+            <p>Gelman, By Lauren, and From The Family Handyman. "10 Expert Gardening Tips for Beginners | Reader's Digest." Readers Digest. N.p., n.d. Web. 07 Sept. 2016. </p>
+        </li>
+        <li>
+            <p>By Clicking Below, I Agree to the Trusted Media Brands Privacy Policy. "Reader's Digest: Official Site to Subscribe & Find Great Reads." Readers Digest. N.p., n.d. Web. 09 Sept. 2016. </p>
+        </li>
+        <li>
+            <p>30, 2014 January, 2014 April 6, and 2013 July 19. "Listotic - Listed & Loved." Listotic. N.p., n.d. Web. 09 Sept. 2016. </p>
+        </li>
+    </ul>
+  </nav>
 
 <footer>
     <p>&copy; 2016 Simpson College Garden Club. All rights reserved.</p>
