Login page complete

--- a/public_html/Login.html
+++ b/public_html/Login.html
@@ -43,6 +43,7 @@
       
        <li>
         <a href="Login.html">Login</a>
+        
       </li>      
     </ul>
   </nav>
@@ -50,7 +51,13 @@
 <section>
     <h1>Login  </h1>
 </section>
-
+    <form>
+        First name: <br>
+        <input type= "text" name="firstname">
+        <br>
+        Last name: <br>
+        <input type = "text" name="lastname">
+    </form>
 <footer>
     <p>&copy; 2016 Simpson College Garden Club. All rights reserved.</p>
 </footer>
