login page update

--- a/public_html/Login.html
+++ b/public_html/Login.html
@@ -52,11 +52,13 @@
     <h1>Login  </h1>
 </section>
     <form>
-        First name: <br>
-        <input type= "text" name="firstname">
+        User Name: <br>
+        <input type= "text" name="username">
         <br>
-        Last name: <br>
-        <input type = "text" name="lastname">
+        Password: <br>
+        <input type = "text" name="password"><br>
+        <p></p>
+        <input type="submit" value="Submit">
     </form>
 <footer>
     <p>&copy; 2016 Simpson College Garden Club. All rights reserved.</p>
