Changed Header from Garden to Gardening

--- a/public_html/SC_Garden_Club.html
+++ b/public_html/SC_Garden_Club.html
@@ -6,14 +6,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>SC GARDEN CLUB</title>
+  <title>SC GARDENING CLUB</title>
 </head>
 
 <section>
     <h1>SC Garden Club</h1>
 </section>
 
-<img src="image.png" alt="SC Garden Club"/>      
+    
 
 
   <nav>
