Added Sign Up Form

--- a/public_html/Sign_Up.html
+++ b/public_html/Sign_Up.html
@@ -55,7 +55,19 @@
     <h1>Sign Up Information </h1>
 </section>
 
-<p> Please print and fill out the sign up sheet below then email to John Smith at SmithJohnSC&commat;Simpson.edu</p> 
+<form>
+  First name:<br>
+  <input type="text" name="firstname"></br>
+  Last name:<br>
+  <input type="text" name="lastname"></br>
+  Email:<br>
+  <input type="text" name="email"></br>
+  Create Password<br>
+  <input type="text" name="password"></br>
+  Retype Password<br>
+  <input type="text" name="password"></br>
+  <input type="submit" value="Submit">
+</form>
 
 <footer>
     <p>&copy; 2016 Simpson College Garden Club. All rights reserved.</p>
