Added Questions link to all pages

--- a/public_html/Projects.html
+++ b/public_html/Projects.html
@@ -45,6 +45,10 @@
         <a href="Login.html">Login</a>
       </li>
       
+       <li>
+        <a href="Questions.html">Questions</a>
+      </li>
+      
     </ul>
   </nav>
   
