--- a/public_html/Questions.html
+++ b/public_html/Questions.html
@@ -44,6 +44,10 @@
              <li>
               <a href="Login.html">Login</a>
             </li>
+            
+             <li>
+        <a href="Questions.html">Questions</a>
+             </li>
       
           </ul>
         </nav>
