--- a/public_html/Calendar.html
+++ b/public_html/Calendar.html
@@ -46,6 +46,10 @@
         <a href="Login.html">Login</a>
       </li>
       
+       <li>
+        <a href="Questions.html">Questions</a>
+      </li>
+      
     </ul>
   </nav>
 
