updated questions page

--- a/public_html/Questions.html
+++ b/public_html/Questions.html
@@ -62,7 +62,8 @@
             Your Email:<br>
             <input type="text" name="firstname"><br>
             Your Question:<br>
-            <input type="text" name="lastname">
+            <input type="text" name="lastname"> <br>
+            <input type="submit" value="Submit">
         </form>
         
         <footer>
